<resources>
    <string name="app_name">GPT</string>
    <string name="gatos_para_todos">Gatos Para Todos </string>
    <string name="capital">Capital</string>
    <string name="campa_as">Campañas</string>
    <string name="adopciones">Adopciones</string>
    <string name="pensiones">Pensiones</string>
    <string name="nombre_campa_a">Nombre Campaña</string>
    <string name="inserte_el_nombre">Inserte el nombre</string>
    <string name="fecha">Fecha:</string>
    <string name="datos_campaña">Datos de la campaña</string>
    <string name="inventario_botiquin">Inventario Botiquin</string>
    <string name="contar_campa_as">Contar campañas</string>
    <string name="subtitle_format">%1$d campañas</string>
    <string name="ocultar">Ocultar</string>
    <string name="botiquin">botiquin</string>
    <string name="a_adir_objeto">Añadir objeto</string>
    <string name="esterilizacion">Esterilizaciones</string>
    <string name="editar_campa_a">Editar campaña</string>
    <string name="buscar_gato">Buscar gato</string>
    <string name="datos_de_esterilizaci_n">Datos de esterilización</string>
    <string name="datos_del_gato">Datos del gato</string>
    <string name="buscar_responsable">Buscar responsable</string>
    <string name="buscar_responable">Buscar Responable</string>
    <string name="costo_total"> $ %1$d </string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="contar_esterilziacioens">Contar Esterilizaciones</string>
    <string name="show_esterilizaciones">%1$d esterilizaciones</string>
    <string name="eliminar_esterilizacion">Eliminar esterilizacion</string>
    <string name="cantidad">Cantidad:</string>
    <string name="presentacion">Presentacion:</string>
    <string name="guardar">Guardar</string>
    <string name="categor_a">Categoría:</string>
    <string name="nombre_material">nombre_material</string>
    <string name="borrar_campa_a">Borrar campaña</string>
    <string name="hembras">Hembras:</string>
    <string name="machos">Machos: </string>
    <string name="dinero_recabado">Dinero Recabado: </string>
    <string name="dinero_total">$ %1$d </string>
    <string name="generar_estadisticas">Generar Estadisticas!</string>
    <string name="buscar_adoptante">Buscar adoptante</string>
    <string name="datos_de_adoptante">Datos de Adoptante</string>
    <string name="agregar_material">Agrega Material</string>
    <string name="material_de_campaña">Material de Campaña</string>
    <string name="nombre">Nombre:</string>
    <string name="actualizar_pension">Actualizar Pension</string>
    <string name="datos_pension">Datos Pension</string>  
    <string name="motivo">Motivo:</string>
    <string name="inserte_titulo">Inserte titulo</string>
    <string name="monto">$$$</string>
    <string name="eliminar">Eliminar</string>
    <string name="ganancias_totales">Ganancias Totales</string>
    <string name="descipci_n">Descipción:</string>
    <string name="fecha_ingreso">Fecha Ingreso:</string>
    <string name="fecha_salida">Fecha Salida:</string>
</resources>
