<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/campaña"
        android:icon="@drawable/botiquin"
        android:title="@string/campa_as"
        android:iconTint="@color/black"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/pension"
        android:icon="@drawable/house"
        android:iconTint="@color/black"
        android:title="@string/pensiones"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/adopcion"
        android:icon="@drawable/adopcion_bn"
        android:iconTint="@color/black"
        android:title="@string/adopciones"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/capital"
        android:iconTint="@color/black"
        android:title="@string/capital"
        android:icon="@drawable/coins"
        app:showAsAction="ifRoom|withText"/>

</menu>