<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/material"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/costoExtraImgen"
        android:layout_width="139dp"
        android:layout_height="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costoExtraImgen"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:fontFamily="@font/alegreya_sans_extrabold"
        android:text="@string/cantidad"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="205dp" />

    <EditText
        android:id="@+id/cantidad_extra"
        android:layout_width="151dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/monto"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        tools:layout_editor_absoluteY="197dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans_extrabold"
        android:text="@string/fecha"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fechaActual"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="262dp" />

    <TextView
        android:id="@+id/fechaActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="204dp"
        android:layout_marginRight="204dp"
        android:text="TextView"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="267dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans_extrabold"
        android:text="@string/descipci_n"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="309dp" />

    <EditText
        android:id="@+id/descripcion"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Descripción"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="344dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
